[GR-60217] Enable sun.misc.Unsafe access in launchers.