@@ -269,6 +269,8 @@ public class ProcessHarnessManager {
         } else {
             commandArgs.add("--enable-native-access=ALL-UNNAMED");
         }
+        // GR-59703: Migrate sun.misc.* usages.
+        commandArgs.add("--sun-misc-unsafe-memory-access=allow");
 
         copyProperty(commandArgs, "polyglot.engine.WarnInterpreterOnly");
         copyProperty(commandArgs, "truffle.nfi.library");
